java-app-nordport.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-nodeport
spec:
  type: NodePort
  selector:
    app: java-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
