kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
spec:
  type: NodePort
  selector:
    kibana.k8s.elastic.co/name: kibana
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30601
