service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp
spec:
  type: NodePort
  selector:
    app: simple-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
