ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-webapp-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: simplewebapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-webapp
                port:
                  number: 8080
